--- a/Application/imgui.ini
+++ b/Application/imgui.ini
@@ -4,8 +4,8 @@ Size=1600,900
 Collapsed=0
 
 [Window][Settings]
-Pos=924,26
-Size=676,874
+Pos=831,26
+Size=769,874
 Collapsed=0
 DockId=0x00000002,0
 
@@ -16,12 +16,18 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=0,26
-Size=922,874
+Size=829,874
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Dear ImGui Demo]
+ViewportPos=886,387
+ViewportId=0xE927CF2F
+Size=550,675
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=86,135 Size=1600,874 Split=X
-  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=922,874 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0xF2944C7F SizeRef=676,874 Selected=0x54723243
+DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=202,182 Size=1600,874 Split=X
+  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=829,874 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000002 Parent=0xF2944C7F SizeRef=769,874 Selected=0x54723243
 
