--- a/Application/imgui.ini
+++ b/Application/imgui.ini
@@ -4,8 +4,8 @@ Size=1600,900
 Collapsed=0
 
 [Window][Settings]
-Pos=831,26
-Size=769,874
+Pos=603,26
+Size=997,874
 Collapsed=0
 DockId=0x00000002,0
 
@@ -16,18 +16,34 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=0,26
-Size=829,874
+Size=601,874
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=886,387
+ViewportPos=1318,92
 ViewportId=0xE927CF2F
 Size=550,675
+Collapsed=1
+
+[Window][Example: Console]
+ViewportPos=398,268
+ViewportId=0x46B5E99C
+Size=829,873
+Collapsed=0
+
+[Window][Example: Log]
+Pos=197,144
+Size=500,400
+Collapsed=0
+
+[Window][Example: Logs]
+Pos=60,60
+Size=500,400
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=202,182 Size=1600,874 Split=X
-  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=829,874 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0xF2944C7F SizeRef=769,874 Selected=0x54723243
+DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=138,187 Size=1600,874 Split=X
+  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=601,874 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000002 Parent=0xF2944C7F SizeRef=997,874 Selected=0x54723243
 
